fixed weird gap issue

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 * {
   position: relative;
   z-index: 1;
+  box-sizing: border-box;
 }
 body {padding: 0; margin: 0; background-color: #eee}
 h1 {color: white;}
@@ -11,6 +12,7 @@ canvas {vertical-align: top; width: 100%}
   display: flex;;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 .flex-container {
   display: flex;
@@ -23,11 +25,13 @@ canvas {vertical-align: top; width: 100%}
   background-color: blue;
 }
 #star-field {
-  z-index: -1;
 }
 #second-module {
   width: 100%;
   height: 300px;
   background-color: pink;
   display: block;
+}
+iframe {
+  border: none;
 }
